--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,7 +3,7 @@
   <div class="flex flex-1 overflow-hidden bg-slate-200">
 
     <!-- Left Side Panel -->
-    <aside class="w-auto shrink-0 h-full  border-blue-100 bg-slate-200">
+    <aside class="w-auto shrink-0 flex h-screen overflow-hidden border-blue-100 bg-slate-200">
       <app-left-side-panel></app-left-side-panel>
     </aside>
 
