--- a/src/app/pages/prenatal/prenatal.component.html
+++ b/src/app/pages/prenatal/prenatal.component.html
@@ -1,10 +1,10 @@
 
 <div class="relative">
+
   <button (click)="toggleSidebar()" class="absolute top-4 left-4 bg-sky-400 text-white p-2 rounded-full shadow-md transition-transform">
-    <img *ngIf="!isSidebarHidden" src="assets/images/compress.png" alt="Arrow Back" class="w-6 h-6 -top-0 left-0" />
+    <img *ngIf="!isSidebarHidden" src="assets/images/extract.png" alt="Arrow Back" class="w-6 h-6 -top-0 left-0" />
     <img *ngIf="isSidebarHidden" src="assets/images/compress.png" alt="Arrow Back" class="w-6 h-6 top-0 left-0" />
   </button>
-</div>
 
 <!-- Sidebar -->
 <aside
