--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,15 +1,20 @@
-<div class="min-h-screen w-full flex flex-col bg-white text-gray-800">
+<div class="min-h-screen w-full flex flex-col bg-slate-200 text-gray-800"
+>
   <!-- Layout Grid -->
-  <div class="flex flex-1 overflow-hidden bg-slate-200">
+  <div class="flex flex-1 overflow-hidden bg-slate-200 bg-cover bg-center"
+  style="background-image: url('assets/images/yep.jpg');">
 
     <!-- Left Side Panel -->
-    <aside class="w-auto shrink-0 flex h-screen overflow-hidden border-blue-100 bg-slate-200">
+     <div class="flex min-h-screen bg-white">
       <app-left-side-panel></app-left-side-panel>
-    </aside>
+
+     </div>
 
     <!-- Main Content (Router Outlet Container) -->
-    <main class="flex-1 flex flex-col w-9/12 overflow-hidden">
-      <div class="flex-1 overflow-y-auto  p-6">
+    <main class="flex-1 flex flex-col w-9/12 overflow-hidden "
+    >
+      <div class="flex-1 overflow-y-auto  p-6"
+      >
         <router-outlet></router-outlet>
       </div>
     </main>
