--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,13 +1,14 @@
 <div class="flex min-h-screen bg ">
   <!-- Left Side - Background Image Section -->
   <div
-    class="relative flex flex-col items-center justify-center p-12 text-center text-slate-200 bg-cover bg-no-repeat rounded-lg shadow-2xl w-5/6 hidden md:flex"
+    class="relative flex flex-col items-center justify-center p-12 text-center text-slate-200 bg-cover  bg-no-repeat rounded-lg shadow-2xl w-5/6 hidden md:flex"
     style="background-image: url('assets/images/supermama.png');">
   </div>
 
 <!-- Right Side - Login Form -->
-<div class="w-full md:w-1/2 flex flex-col justify-center items-center p-12 bg-blue-600 bg-cover bg-opacity-10  border-gray-200  "
+<div class="w-full md:w-1/2 flex flex-col justify-center items-center p-12 bg-blue-600 bg-cover   border-gray-200  "
 style="background-image: url('assets/images/therm.jpg');">
+
   <!-- Image Container -->
   <div class="w-48 flex justify-center mb-6 rounded-3xl">
     <img src="assets/images/immune-system.png" alt="Immune System" class=" h-auto " [routerLink]="['/setup-user']" routerLinkActive="router-link-active" >
@@ -16,14 +17,15 @@ style="background-image: url('assets/images/therm.jpg');">
 
 
   <h2 class="text-5xl font-extrabold mb-4 text-teal-700 text-center">
-    Prenatal & Child Immunization
+    Prenatal and Child Immunization
+    <br>Record Management
   </h2>
 
   <h3 class="text-2xl font-normal mb-6 text-teal-800 text-center">
     Secure & Efficient Tracking System
   </h3>
 
-  <p class="text-md text-gray-600 mb-20 text-center">
+  <p class="text-wrap text-gray-600 mb-20 text-center">
     A powerful and secure immunization tracking system designed for efficiency, compliance, and patient care.
   </p>
 
